--- a/styles.css
+++ b/styles.css
@@ -4,442 +4,76 @@
     box-sizing: border-box;
 }
 .page_contianer{
-    height: 300dvh;
+    height: fit-content;
     display: grid;
+    height: 300vh;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(3,1fr);
 }
-.show_first_information{
+.page_contianer > div{
+    width: 350px;
+    height: 100%;
+    outline: 2px solid blue;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.canvas_target{
     width: 100%;
     height: 100%;
-    color: white;
-    outline: 2px solid black;
-    margin-inline: auto;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 15% 30% 55%;
-    background-image: url('./bg_app.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
 }
-.show_first_information > h1{
-    width: fit-content;
-    height: fit-content;
+.section_1{
+  position: relative;
+}
+.section_1 > p{
+  position: absolute;
+  top: 14px;
+  margin-inline:auto ;
+  width: fit-content;
+  height: fit-content;
+  font-size: 20px;
+  color: red;
+}
+@keyframes scaleframe {
+    0% {
+      transform: scale(1.1);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+
+  .section_2{
+    overflow: hidden;
+    position: relative;
+  }
+  .section_2_text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.4); 
+    opacity: 0;
+    animation: fadeInScale 2s ease-in-out forwards; 
     text-align: center;
-    margin: auto;
-}
-.carrusel_cotnainer{
-    width: 90%;
-    height: 90%;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.carrusel_cotnainer > div{
-    width: 85%;
-    height: 100%;
-    border-radius: 15px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    transition: background-image 1s ease;
-    text-align: center;
-    background-position: center;
-}
-.news_movements_container{
-    width: 90%;
-    height: 100%;
-    margin-inline: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between
+    line-height: 30px;
+    font-size: 20px;
 }
 
-.check_news_container{
-    width: 100%;
-    height: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-}
-.check_news_container > p{
-    font-weight: bold;
-    margin-bottom: 0;
-}
-.select_news_display{
-    width: 100%;
-    height: 20%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.select_news_display > button:nth-child(1){
-    width: fit-content;
-    height: fit-content;
-    padding: 4px 7px;
-    border-radius: 15px / 50%;
-    border: none;
-    background: #68da3e;
-    color: white;
-}
-.select_news_display > button{
-    width: fit-content;
-    height: fit-content;
-    padding: 4px 7px;
-    border-radius: 15px / 50%;
-    border: none;
-    background: #cbcbcb;
-}
-.information_news_selected{
-    width: 100%;
-    height: 60%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.information_news_selected > div:nth-child(1){
-    width: 100px;
-    height: 100px;
-    border-radius: 15px;
-    background-image:url('./logo.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-.information_news_selected > div:nth-child(2){
-    width: 70%;
-    height: 100px;
-    border-radius: 15px;
-    background: #68da3e;
-    color:black;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    align-items: center;
-    padding: 1px 2px;
-}
-.info_box_title{
-    width: fit-content;
-    height: fit-content;
-    font-weight: bolder;
-}
-.info_box_description{
-    width: fit-content;
-    height: fit-content;
-    font-size: 16px;
-}
-.data_weekend_container{
-    width: 100%;
-    height:45%;
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: column;
-}
-.data_weekend_container > p{
-    font-size: 20px;
-}
-.data_weekend_container > div{
-    width: 100%;
-    height: 85%;
-    background-color: #68da3e;
-    border-radius: 15px 15px 0 0;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-template-rows: repeat(2,1fr);
-    color: black;
-}
-.stadistics_week{
-    width: 80%;
-    height: 60%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    margin: auto;
-}
-.stadistics_week > p:first-child{
-    font-weight: bold;
-    width: fit-content;
-    height: fit-content;
-    font-size: 20px;
-    margin: 0;
-}
-.stadistics_week > p:last-child{
-    width: fit-content;
-    height: fit-content;
-    font-size: 14px;
-    margin: 0;
-}
-.graph_data_container{
-    width: 100%;
-    height: 100%;
-    background-color:#e6eef6;
-}
-.graph_data_container > header{
-    width: 90%;
-    height: 50%;
-    margin: auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    flex-direction: column;
-}
-.title_graph_display{
-    width: fit-content;
-    margin-top: 2%;
-    height: fit-content;
-}
-.graph_selected{
-    width: min(100%,650px);
-    height: 80%;
-    border-radius: 15px;
-    background: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.graph_details_display{
-    position: relative;
-    width: 80%;
-    height: 80%;
-    border-left: 1px solid black;
-    border-bottom: 1px solid black;
-}
-.best_country_emisions{
-    width: min(100%,650px);
-    height: 10%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-.best_country_emisions > p{
-    width: fit-content;
-    height: fit-content;
-}
-.graph_details_display > p:nth-child(1){
-    width: fit-content;
-    position: absolute;
-    height: fit-content;
-    left: -25px;
-    bottom: 10%;
-}
-.graph_details_display > p:nth-child(2){
-    width: fit-content;
-    position: absolute;
-    height: fit-content;
-    left: -25px;
-    bottom: 25%;
-}
-.graph_details_display > p:nth-child(3){
-    width: fit-content;
-    position: absolute;
-    height: fit-content;
-    left: -25px;
-    bottom: 40%;
-}
-.graph_details_display > p:nth-child(4){
-    width: fit-content;
-    position: absolute;
-    height: fit-content;
-    left: -25px;
-    bottom: 55%;
-}
-.credits_bar_1{
-    width: 20px;
-    position: absolute;
-    height: 15%;
-    left: 20%;
-    background-color: #68da3e;
-    bottom: 0;
-}
-.credits_bar_2{
-    width: 20px;
-    position: absolute;
-    height: 65%;
-    left: 50%;
-    background-color: #68da3e;
-    bottom: 0;
-}
-.credits_bar_3{
-    width: 20px;
-    position: absolute;
-    height: 45%;
-    left: 80%;
-    background-color: #68da3e;
-    bottom: 0;
-}
-.last_information_container{
-    width: 90%;
-    margin-inline: auto;
-    height: 45%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: column;
-}
-.last_information_container > p {
-    width: fit-content;
-    height: fit-content;
-    font-size: 20px;
-    font-weight: bold;
-    margin-bottom: 0px;
-}
-.box_our_news{
-    width: 100%;
-    height: 40%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-.box_our_news > img{
-    width: 120px;
-    height: 120px;
-    object-fit: cover;
-    border-radius: 15px;
-    overflow: hidden;
-}
-.box_our_news > div{
-    width: 60%;
-    height: 120px;
-    border-radius: 15px;
-    background: #68da3e;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 3px 0px;
-    cursor: pointer;
-}
-.text_description_post{
-    height: 50px;
-    overflow:hidden ;
-    width: 90%;
-    margin-inline: auto;
-    font-weight: bolder;
-}
-.name_user_post{
-    width: 90%;
-    height: fit-content;
-    margin-inline: auto;
-    font-weight: bolder;
-    color: blue;
-    text-decoration: underline;
-}
-.imagen_to_{
-    width: 100%;
-    height: 40%;
-    border-radius: 15px;
-    background-color: #68da3e;
-}
-.market_container{
-    width: 100%;
-    height: 100%;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 10% 35% 55%;
-    background-color: #e6eef6;
-}
-.title_market{
-    width: 90%;
-    height: fit-content;
-    margin: auto;
-    font-size: 20px;
-    font-weight: bolder;
-}
-.information_market_data{
-    width: 90%;
-    height: fit-content;
-    margin: auto;
-    font-size: 18px;
-}
-.box_to_redict_user{
-    width: 90%;
-    height: 100%;
-    margin: auto;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 55% 45%;
-}
-.box_to_buy_credits{
-    width: min(100%,600px);
-    height: 90%;
-    border-radius: 10px;
-    outline: 2px solid #e3e1e1;
-    margin: auto;
-    background-color: white;
-    position: relative;
-    display: grid;
-    justify-items: center;
-    align-items: flex-end;
-}
-.box_to_buy_credits > p {
-    width: 90%;
-    height: fit-content;
-}
-.box_to_show_exchanges{
-    width: min(100%,600px);
-    height: 90%;
-    border-radius: 10px;
-    outline: 2px solid #e3e1e1;
-    margin: auto;
-    background-color: white;
-    display:grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(2,1fr);
-}
-.box_to_show_exchanges > button {
-    width: 100px;
-    height: fit-content;
-    margin: auto;
-    padding: 3px 5px;
-    border: 1px solid #e3e1e1;
-    border-radius: 10px;
-    background: transparent;
-}
-.box_to_show_exchanges > button:hover{
-    box-shadow: 0px 2px 3px 3px rgba(0, 0, 0, 0.104)
-}
-.btn_to_buy{
-    width: fit-content;
-    height: fit-content;
-    border: none;
-    border-radius: 0px 10px 0px 10px;
-    position: absolute;
-    padding: 3px 5px;
-    background-color: red;
-    right: 5px;
-    top: 5px;
-    color: white;
-}
-.exchanges_title{
-    width: fit-content;
-    height: fit-content;
-    margin: auto;
-    font-weight: bolder;
-    font-size: 22px;
-}
-@media (width > 400px) {
-    .news_movements_container{
-        width: 100%;
+@keyframes fadeInScale {
+    0% {
+        opacity: 0;
+        transform: translate(-50%, -50%) scale(0.4); /* Escala inicial y centrado */
     }
-    .data_weekend_container{
-        height: 50%;
+    100% {
+        opacity: 1;
+        transform: translate(-50%, -50%) scale(1); /* Escala final y centrado */
     }
-    .data_weekend_container > div {
-        height: 100%;
-    }
-    .data_weekend_container > p {
-        margin-bottom: 0;
-    }
-    .check_news_container{
-        width: min(90%, 800px);
-    }
-    .select_news_display{
-        justify-content: space-around;
-    }
-    .imagen_to_{
-        width: 90%;
-    }
+}
+
+.scale_section_2{
+  animation-name: scaleframe;
+  animation-duration: 1s; 
+  animation-timing-function: linear; 
+  animation-fill-mode: forwards;
 }
