--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 .page_contianer{
     display: grid;
     height: 300vh;
@@ -29,10 +30,10 @@
   position: absolute;
   top: 14px;
   margin-inline:auto ;
-  width: fit-content;
+  width: 95%;
   height: fit-content;
   font-size: 20px;
-  color: red;
+  text-align: center;
 }
 @keyframes scaleframe {
     0% {
@@ -110,6 +111,15 @@
         transform: translate(-50%, -50%) rotateZ(-5deg) scale(1); /* Escala final y centrado */
     }
 }
+@keyframes scaleImage {
+      0% {
+        transform: translate(-50%, -50%) scale(0.2); /* Escala inicial y centrado */
+    }
+    100% {
+        transform: translate(-50%, -50%) scale(1); /* Escala final y centrado */
+    }
+}
+
 .section_3--wedding-text{
   position: absolute;
   top: 60%;
@@ -119,18 +129,23 @@
   height: fit-content;
   font-size: 25px;
   animation-name: fadeInText;
-  animation-duration: 1.5s; 
+  animation-duration: 2.5s; 
   animation-timing-function: linear; 
   animation-fill-mode: forwards;
   
 }
+
 .img_wedding {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(0.2);
   width: 230px;
   height: 230px;
+  animation-name: scaleImage;
+  animation-duration: 2s; 
+  animation-timing-function: linear; 
+  animation-fill-mode: forwards;
 }
 .first_square{
   position: absolute;
@@ -141,18 +156,18 @@
   width: 250px;
   height: 250px;
   border: 3px solid;
- border-image-source: linear-gradient(90deg,goldenrod 70% ,white 76%,goldenrod );
- border-image-slice: 1;
+  border-image-source: linear-gradient(90deg,goldenrod 70% ,white 76%,goldenrod );
+  border-image-slice: 1;
 }
 .second_square{
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) rotateZ(-5deg) scale(0.4) ; 
-  animation: scaleSquares_rotate 1.6s ease-in-out forwards; 
+  animation: scaleSquares_rotate 1.8s ease-in-out forwards; 
   width: 250px;
   height: 250px;
- border: 3px solid;
- border-image-source: linear-gradient(90deg,goldenrod ,white 16%,goldenrod 25%);
- border-image-slice: 1;
+  border: 3px solid;
+  border-image-source: linear-gradient(90deg,goldenrod ,white 16%,goldenrod 25%);
+  border-image-slice: 1;
 }
