--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: rgba(128, 128, 128, 0.127);
 }
 .canvas_target{
     width: 100%;
@@ -49,6 +50,11 @@
   .section_2{
     overflow: hidden;
     position: relative;
+    background: url('/acuarel_background_center.jpg');
+    background-size: 250px 250px;
+    background-position: center;
+    background-repeat: no-repeat;
+    z-index: -2;
   }
   .section_2_text {
     position: absolute;
@@ -63,6 +69,7 @@
     font-family: "Great Vibes", cursive;
     font-weight: 400;
     font-style: normal;
+    color: goldenrod;
 }
 
 @keyframes fadeInScale {
@@ -82,7 +89,7 @@
   animation-timing-function: linear; 
   animation-fill-mode: forwards;
 }
-.section_2 > span{
+.section_2-outer_circle{
   position: absolute;
   width: 290px;
   height: 290px;
@@ -91,6 +98,17 @@
   transform: translate(-50%, -50%);
   border-radius: 50%;
   border: 2px solid black;
+  z-index: -1;
+}
+.section_2-inner_circle{
+  position: absolute;
+  width: 280px;
+  height: 280px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  border: 1px solid black;
   z-index: -1;
 }
 .section_3{
@@ -140,14 +158,17 @@
   top: 60%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 45%;
+  width: 75%;
   height: fit-content;
-  font-size: 25px;
+  font-size: 35px;
+  text-align: center;
   animation-name: fadeInText;
   animation-duration: 2.5s; 
   animation-timing-function: linear; 
   animation-fill-mode: forwards;
-  
+  font-family: "Great Vibes", cursive;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .img_wedding {
@@ -161,6 +182,7 @@
   animation-duration: 2s; 
   animation-timing-function: linear; 
   animation-fill-mode: forwards;
+  z-index: -1;
 }
 .first_square{
   position: absolute;
@@ -173,6 +195,7 @@
   border: 3px solid;
   border-image-source: linear-gradient(90deg,goldenrod 70% ,white 76%,goldenrod );
   border-image-slice: 1;
+  z-index: -2;
 }
 .second_square{
   position: absolute;
@@ -185,4 +208,5 @@
   border: 3px solid;
   border-image-source: linear-gradient(90deg,goldenrod ,white 16%,goldenrod 25%);
   border-image-slice: 1;
+  z-index: -2;
 }
