--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,9 @@
 
 .page_contianer{
     display: grid;
-    height: 300vh;
+    height: 400vh;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(3,1fr);
+    grid-template-rows: repeat(4,1fr);
 }
 .page_contianer > div{
     width: 350px;
@@ -283,4 +283,25 @@
   border-image-source: linear-gradient(90deg,#cbac44 ,white 16%,#cbac44 25%);
   border-image-slice: 1;
   z-index: -2;
+}
+.section_4 {
+  position: relative;
+}
+.section_4 > p{
+  width: 250px;
+  height: 250px;
+  outline: 2px solid red;
+  z-index: 1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) ;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  line-height: 20px;
+  font-size: 20px;
+  
 }
