--- a/styles.css
+++ b/styles.css
@@ -13,14 +13,14 @@
     grid-template-rows: repeat(5,1fr);
 }
 .page_contianer > div{
-    width: 350px;
+    width: min(360px, 100%);
     height: 100%;
-    outline: 2px solid blue;
     margin: auto;
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    outline: 1px solid red;
 }
 .canvas_target{
     width: 100%;
