--- a/styles.css
+++ b/styles.css
@@ -465,3 +465,19 @@
   margin-inline: auto;
   text-align: center;
 }
+.section_5--godparents_container{
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-items: center;
+}
+.section_5--godparents_container > p:nth-child(1){
+  text-decoration: underline;
+  font-family: "Great Vibes", cursive;
+  font-weight: 400;
+  font-style: normal;
+  color: #9b5a01;
+  text-align: center;
+  font-size: 30px;
+
+}
