--- a/styles.css
+++ b/styles.css
@@ -443,11 +443,10 @@
 .section_5 > div{
   position: absolute;
   width: 80%;
-  height: 70%;
+  height: 65%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  outline: 1px solid blue;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 30% 40% 30%;
@@ -457,6 +456,7 @@
   width: 85%;
   height: fit-content;
   text-decoration: underline;
+  text-decoration-skip:5px;
   font-family: "Great Vibes", cursive;
   font-weight: 400;
   font-style: normal;
@@ -471,13 +471,17 @@
   display: grid;
   place-items: center;
 }
-.section_5--godparents_container > p:nth-child(1){
-  text-decoration: underline;
-  font-family: "Great Vibes", cursive;
-  font-weight: 400;
+
+
+.section_5--names_persons{
+  font-family: "Cormorant Infant", serif;
+  font-weight: 600;
   font-style: normal;
   color: #9b5a01;
+  font-size: 20px;
+  width: 80%;
+  margin-inline: auto;
   text-align: center;
-  font-size: 30px;
-
+  height: fit-content;
+  margin-bottom:auto;
 }
