--- a/styles.css
+++ b/styles.css
@@ -467,9 +467,10 @@
 }
 .section_5--godparents_container{
   width: 100%;
-  height: 100%;
+  height: 90%;
   display: grid;
   place-items: center;
+  margin: auto;
 }
 
 
@@ -484,4 +485,24 @@
   text-align: center;
   height: fit-content;
   margin-bottom:auto;
+}
+@keyframes scaleframe_section5 {
+  0% {
+    transform: scale(1.1);
+    opacity: 0;
+  }
+  50%{
+    transform: scale(1.05);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+.scale_section_5{
+  animation-name: scaleframe_section4;
+  animation-duration: 2.6s; 
+  animation-timing-function: linear; 
+  animation-fill-mode: forwards;
 }
