--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,9 @@
 
 .page_contianer{
     display: grid;
-    height: 700vh;
+    height: 1100vh;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(7,1fr);
+    grid-template-rows: repeat(11,1fr);
 }
 .page_contianer > div{
     width: min(360px, 100%);
@@ -517,4 +517,103 @@
 }
 .section_6{
   position: relative;
+}
+.section_7{
+  position: relative;
+}
+.section_7 > section{
+  position: absolute;
+  width: 80%;
+  height: 80%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(4,1fr);
+}
+.section_7--title{
+  width: fit-content;
+  height: fit-content;
+  margin: auto;
+  font-family: "Great Vibes", cursive;
+  font-weight: 400;
+  font-style: normal;
+  color: #9b5a01;
+  font-size: 35px;
+  letter-spacing: 5px;
+}
+.section_7--date{
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-template-rows: 1fr;
+}
+.section_7--date > p{
+  width: 100%;
+  height: fit-content;
+  border-top: 2px solid #9b5a01;
+  border-bottom: 2px solid #9b5a01;
+  margin: auto;
+  color: #9b5a01;
+  font-size: 20px;
+  text-align: center;
+}
+.section_7--date_description{
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 30% 40% 30%;
+}
+.section_7--date_description > p{
+  width: fit-content;
+  height: fit-content;
+  margin: auto;
+  color: #9b5a01;
+  font-family: "Cormorant Infant", serif;
+  font-weight: 600;
+  font-style: normal;
+  font-size: 20px;
+}
+.section_7--date_description > p:nth-child(2){
+  font-size: 40px;
+}
+.section_7--see_map{
+  width: fit-content;
+  height: fit-content;
+  margin: auto;
+  font-size: 16px;
+  border-radius:  10px / 50%;
+  background-color: rgb(89, 3, 89);
+  color: white;
+  padding: 5px 7px;
+  border: none;
+}
+.section_7--description_event{
+  width: 100%;
+  height: 100%;
+  display: grid;
+}
+.section_7--description_event > h4{
+  height: fit-content;
+  width: fit-content;
+  margin: auto;
+  font-size: 30px;
+  border-bottom: 1px solid #9b5a01 ;
+  font-family: "Great Vibes", cursive;
+  font-weight: 400;
+  font-style: normal;
+  color: #9b5a01;
+}
+.section_7--description_event > p{
+  color: #9b5a01;
+  font-family: "Cormorant Infant", serif;
+  font-weight: 600;
+  font-style: normal;
+  font-size: 16px;
+  width: fit-content;
+  margin: auto;
+  text-align: center;
 }
