--- a/styles.css
+++ b/styles.css
@@ -179,7 +179,7 @@
   left: 50%;
   transform: translate(-50%, -50%) scale(0.4);
   animation-name: scaleOuterCircle;
-  animation-duration: 5.5s; 
+  animation-duration: 1.5s; 
   animation-timing-function: linear; 
   animation-fill-mode: forwards;
   border: 3px solid transparent;
@@ -208,7 +208,7 @@
   left: 50%;
   transform: translate(-50%, -50%)scale(0.4);
   animation-name: scaleInnerCircle;
-  animation-duration: 5.8s; 
+  animation-duration: 2.4s; 
   animation-timing-function: linear; 
   animation-fill-mode: forwards;
   border: 1px solid transparent;
@@ -252,36 +252,36 @@
 @keyframes scaleSquares {
   0% {
     opacity: 0;
-    transform: translate(-50%, -50%) scale(0.4); /* Escala inicial y centrado */
+    transform: translate(-50%, -50%) scale(0.4) rotateZ(-45deg); /* Escala inicial y centrado */
 }
 100% {
     opacity: 1;
-    transform: translate(-50%, -50%) scale(1); /* Escala final y centrado */
+    transform: translate(-50%, -50%) scale(1) rotateZ(0deg); /* Escala final y centrado */
 }
 }
 @keyframes scaleSquares_rotate {
       0% {
         opacity: 0;
-        transform: translate(-50%, -50%) rotateZ(-5deg) scale(0.4); /* Escala inicial y centrado */
+        transform: translate(-50%, -50%) rotateZ(-5deg) scale(0.4) rotateZ(-45deg); /* Escala inicial y centrado */
     }
     100% {
         opacity: 1;
-        transform: translate(-50%, -50%) rotateZ(-5deg) scale(1); /* Escala final y centrado */
+        transform: translate(-50%, -50%) rotateZ(-5deg) scale(1) rotateZ(0deg); /* Escala final y centrado */
     }
 }
 @keyframes scaleImage {
       0% {
-        transform: translate(-50%, -50%) scale(0.2); /* Escala inicial y centrado */
+        transform: translate(-50%, -50%) scale(0.2) rotateZ(-30deg); /* Escala inicial y centrado */
     }
     100% {
-        transform: translate(-50%, -50%) scale(1); /* Escala final y centrado */
+        transform: translate(-50%, -50%) scale(1) rotateZ(0deg); /* Escala final y centrado */
     }
 }
 .section_3--wedding-text{
   position: absolute;
   top: 60%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) ;
   width: 75%;
   height: fit-content;
   font-size: 35px;
@@ -300,11 +300,11 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(0.2);
+  transform: translate(-50%, -50%) scale(0.2) rotateZ(-30deg);
   width: 230px;
   height: 230px;
   animation-name: scaleImage;
-  animation-duration: 6.4s; 
+  animation-duration: 5.5s; 
   animation-timing-function: linear; 
   animation-fill-mode: forwards;
   z-index: -1;
@@ -313,8 +313,8 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(0.4); 
-  animation: scaleSquares 4.6s ease-in-out forwards;
+  transform: translate(-50%, -50%) scale(0.4) rotateZ(-45deg); 
+  animation: scaleSquares 4.5s ease-in-out forwards;
   width: 250px;
   height: 250px;
   border: 3px solid;
@@ -326,8 +326,8 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) rotateZ(-5deg) scale(0.4) ; 
-  animation: scaleSquares_rotate 4.2s ease-in-out forwards;
+  transform: translate(-50%, -50%) rotateZ(-5deg) scale(0.4) rotateZ(-45deg); 
+  animation: scaleSquares_rotate 5s ease-in-out forwards;
   width: 250px;
   height: 250px;
   border: 3px solid;
@@ -346,7 +346,10 @@
 50%{
   transform: translate(-50%, -50%) scale(1.2); 
   color: #9b5b0171;
-
+}
+75%{
+  transform: translate(-50%, -50%) scale(1.1); 
+  color: #9b5b0171;
 }
 100% {
     transform: translate(-50%, -50%) scale(1); 
@@ -376,7 +379,7 @@
   font-style: normal;
   color: #9b5a01;
   transform: translate(-50%, -50%) scale(0.4) ; 
-  animation: scalePhrase 4.2s ease-in-out forwards;
+  animation: scalePhrase 3.8s linear forwards;
 }
 .section_4-outer_circle{
   position: absolute;
@@ -386,7 +389,7 @@
   left: 50%;
   transform: translate(-50%, -50%) scale(0.4);
   animation-name: scaleOuterCircle;
-  animation-duration: 5.5s; 
+  animation-duration: 1.5s; 
   animation-timing-function: linear; 
   animation-fill-mode: forwards;
   border: 3px solid transparent;
@@ -405,7 +408,7 @@
   left: 50%;
   transform: translate(-50%, -50%)scale(0.4);
   animation-name: scaleInnerCircle;
-  animation-duration: 5.8s; 
+  animation-duration: 2.4s; 
   animation-timing-function: linear; 
   animation-fill-mode: forwards;
   border: 1px solid transparent;
@@ -743,9 +746,12 @@
 .section_9 > section{
   position: absolute;
   width: 80%;
-  height: 80%;
+  height: 65%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   outline: 1px solid blue;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 20% 30% 50%;
 }
