--- a/styles.css
+++ b/styles.css
@@ -13,13 +13,14 @@
     grid-template-rows: repeat(11,1fr);
 }
 .page_contianer > div{
-    width: min(400px, 100%);
+    width: min(430px, 100%);
     height: 100%;
     margin: auto;
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    outline: 3px solid red;
 }
 .canvas_target{
     width: 100%;
@@ -30,7 +31,7 @@
 }
 .section_1 > p{
   position: absolute;
-  top: 14px;
+  top: 28px;
   margin-inline:auto ;
   width: 95%;
   height: fit-content;
@@ -43,7 +44,7 @@
 .section_1--counter{
   width: 100%;
   position: absolute;
-  top: 20%;
+  top: 15%;
   left: 50%;
   transform: translate(-50%, -50%);
   height: 150px;
@@ -52,8 +53,8 @@
   align-items: center;
 }
 .section_1--counter > div{
-  width: 60px;
-  height: 60px;
+  width: 70px;
+  height: 70px;
   border: 1px solid transparent;
   border-radius: 50%;
   position: relative;
