--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@
 }
 .section_1 > p{
   position: absolute;
-  top: 28px;
+  top: 25px;
   margin-inline:auto ;
   width: 95%;
   height: fit-content;
@@ -44,7 +44,7 @@
 .section_1--counter{
   width: 100%;
   position: absolute;
-  top: 15%;
+  top: 20%;
   left: 50%;
   transform: translate(-50%, -50%);
   height: 150px;
@@ -116,7 +116,6 @@
   }
 
   .section_2{
-    overflow: hidden;
     position: relative;
     background: transparent;
     background-size: 250px 250px;
@@ -748,11 +747,101 @@
   position: absolute;
   width: 80%;
   height: 65%;
-  top: 50%;
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
-  outline: 1px solid blue;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 20% 30% 50%;
+}
+.section_9--title{
+  width: fit-content;
+  height: fit-content;
+  margin-top: auto;
+  font-family: "Great Vibes", cursive;
+  font-weight: 400;
+  font-style: normal;
+  color: #9b5a01;
+  margin-inline: auto;
+  font-size: 30px;
+  text-decoration: underline;
+}
+.section_9--description{
+  width: 70%;
+  height: fit-content;
+  margin: auto;
+  text-align: center;
+  color: #9b5a01;
+  font-family: "Cormorant Infant", serif;
+  font-weight: 600;
+  font-style: normal;
+  font-size: 20px;
+}
+.section_9--medias{
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(3,1fr);
+}
+.section_9--medias > div{
+  width: 80%;
+  height: 100%;
+  display: grid;
+  margin: auto;
+  font-size: 20px;
+  place-items: center;
+  color: #9b5a01;
+  font-family: "Cormorant Infant", serif;
+  font-weight: 600;
+  font-style: normal;
+}
+.section_10{
+  position: relative;
+}
+.section_10 > section{
+  position: absolute;
+  width: 80%;
+  height: 60%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 30% 50% 20%;
+}
+.section_10--title{
+  width: fit-content;
+  height: fit-content;
+  margin-top: auto;
+  font-family: "Great Vibes", cursive;
+  font-weight: 400;
+  font-style: normal;
+  color: #9b5a01;
+  margin-inline: auto;
+  font-size: 30px;
+  text-decoration: underline;
+}
+.section_10--description{
+  font-size: 20px;
+  place-items: center;
+  color: #9b5a01;
+  font-family: "Cormorant Infant", serif;
+  font-weight: 600;
+  font-style: normal;
+  width: 100%;
+  height: fit-content;
+  margin: auto;
+  text-align: center;
+}
+.section_11{
+  position: relative;
+}
+.section_11 > section{
+  position: absolute;
+  width: 80%;
+  height: 60%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
