--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    outline: 3px solid red;
+    outline: 1px solid red;
 }
 .canvas_target{
     width: 100%;
@@ -458,6 +458,9 @@
 .section_5{
   position: relative;
 }
+.section_5 > canvas{
+  opacity: 0;
+}
 .section_5 > div{
   position: absolute;
   width: 80%;
@@ -468,6 +471,7 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 30% 40% 30%;
+  color: transparent;
 }
 @keyframes fadeInScale_text_section5 {
   0% {
@@ -485,7 +489,6 @@
   width: 85%;
   height: fit-content;
   text-decoration: underline;
-  text-decoration-skip:5px;
   font-family: "Great Vibes", cursive;
   font-weight: 400;
   font-style: normal;
@@ -576,6 +579,9 @@
 .section_7{
   position: relative;
 }
+.section_7 > canvas{
+  opacity: 0;
+}
 .section_7 > section{
   position: absolute;
   width: 80%;
@@ -586,6 +592,7 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(4,1fr);
+  opacity: 0;
 }
 .scale_section_7{
   animation-name: scaleframe_section7;
@@ -709,6 +716,9 @@
   100% {
     transform:  scale(1);
   }
+}
+.section_8 > canvas{
+  opacity: 0;
 }
 .section_8 > section{
   position: absolute;
