--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,8 @@
     grid-template-rows: repeat(11,1fr);
 }
 .page_contianer > div{
-    width: min(430px, 100%);
-    height: 100%;
+    width: 516px;
+    height: 918px;
     margin: auto;
     display: flex;
     justify-content: center;
@@ -28,14 +28,18 @@
 }
 .section_1{
   position: relative;
+  background: url('fondo-arriba.svg');
+  background-size: 150%;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 .section_1 > p{
   position: absolute;
-  top: 25px;
+  top: 45px;
   margin-inline:auto ;
   width: 95%;
   height: fit-content;
-  font-size: 20px;
+  font-size: 30px;
   text-align: center;
   font-family: "Cormorant Infant", serif;
   font-weight: 300;
@@ -44,7 +48,7 @@
 .section_1--counter{
   width: 100%;
   position: absolute;
-  top: 20%;
+  top: 22%;
   left: 50%;
   transform: translate(-50%, -50%);
   height: 150px;
@@ -58,7 +62,7 @@
   border: 1px solid transparent;
   border-radius: 50%;
   position: relative;
-  background-image: linear-gradient(white,white)
+  background-image: linear-gradient(white,rgb(255, 255, 255))
   ,linear-gradient(90deg,#9b5a01, #cbac44  );
   background-origin: border-box;
   background-clip: content-box, border-box;
@@ -116,10 +120,16 @@
   }
 
   .section_2{
-    position: relative;    
+    position: relative;  
+    background: url('fondo-abajo.svg');
+    background-size: 150%;
+    background-repeat: no-repeat;
+    background-position: center;
+    z-index: -5;
   }
   .section_2 > canvas{
     opacity: 0;
+    z-index: 2;
   }
   .section_2 > p{
     opacity: 0;
@@ -131,21 +141,31 @@
     opacity: 0;
     transform: translate(-50%, -50%) scale(0.4); 
     animation: fadeInScale 8s ease-in-out forwards; 
-    text-align: center;
     line-height: 60px;
     font-size: 40px;
     font-family: "Great Vibes", cursive;
     font-weight: 400;
     font-style: normal;
     color: #cbac44;
-    overflow: visible;
-    background-image: url('/acuarel_background_center.jpg');
-    background-size: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
     letter-spacing: 2px;
+    width: 275px;
+    height: 275px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background: transparent;
 }
-
+.section_2--background_card{
+  width: calc(100% - 3px);
+  height:calc(100% - 3px) ;
+  border-radius: 50%;
+  background: url('fondo-abajo.svg');
+  background-size: 150%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
 @keyframes fadeInScale {
     0% {
         opacity: 0;
@@ -218,10 +238,17 @@
   background-origin: border-box;
   background-clip: content-box, border-box;
   z-index: -1;
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .section_3{
   position: relative;
+  background: url('fondo-arriba.svg');
+  background-size: 150%;
+  background-repeat: no-repeat;
+  background-position: center;
+  
 }
 .section_3 > img{
   opacity: 0;
@@ -240,6 +267,7 @@
   animation-duration: 7s; 
   animation-timing-function: linear; 
   animation-fill-mode: forwards;
+  z-index: 3;
 }
 @keyframes fadeInText {
  0% {
@@ -313,7 +341,6 @@
   animation-duration: 5.5s; 
   animation-timing-function: linear; 
   animation-fill-mode: forwards;
-  z-index: -1;
 }
 .first_square{
   position: absolute;
@@ -326,7 +353,6 @@
   border: 3px solid;
   border-image-source: linear-gradient(90deg,#cbac44 70% ,white 76%,#cbac44 );
   border-image-slice: 1;
-  z-index: -2;
 }
 .second_square{
   position: absolute;
@@ -339,10 +365,14 @@
   border: 3px solid;
   border-image-source: linear-gradient(90deg,#cbac44 ,white 16%,#cbac44 25%);
   border-image-slice: 1;
-  z-index: -2;
 }
 .section_4 {
   position: relative;
+  background: url('fondo-abajo.svg');
+  background-size: 150%;
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: -4;
 }
 .section_4 > canvas{
   opacity: 0;
@@ -551,6 +581,9 @@
 }
 .section_6 > img{
   opacity: 0;
+}
+.section_6 > canvas{
+  z-index: 2;
 }
 .scale_section_6{
   animation-name: scaleframe_section6;
