--- a/styles.css
+++ b/styles.css
@@ -193,8 +193,8 @@
 }
 .section_2-outer_circle{
   position: absolute;
-  width: 300px;
-  height: 300px;
+  width: 350px;
+  height: 350px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(0.4);
@@ -213,17 +213,16 @@
 @keyframes scaleInnerCircle {
       0% {
         transform: translate(-50%, -50%) scale(0.4); 
-      /* Escala inicial y centrado */
     }
     100% {
-        transform: translate(-50%, -50%) scale(1); /* Escala final y centrado */
+        transform: translate(-50%, -50%) scale(1);
 
     }
 }
 .section_2-inner_circle{
   position: absolute;
-  width: 280px;
-  height: 280px;
+  width: 330px;
+  height: 330px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%)scale(0.4);
@@ -335,8 +334,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(0.2) rotateZ(-30deg);
-  width: 230px;
-  height: 230px;
+  width: 330px;
+  height: 330px;
   animation-name: scaleImage;
   animation-duration: 5.5s; 
   animation-timing-function: linear; 
@@ -348,8 +347,8 @@
   left: 50%;
   transform: translate(-50%, -50%) scale(0.4) rotateZ(-45deg); 
   animation: scaleSquares 4.5s ease-in-out forwards;
-  width: 250px;
-  height: 250px;
+  width: 350px;
+  height: 350px;
   border: 3px solid;
   border-image-source: linear-gradient(90deg,#cbac44 70% ,white 76%,#cbac44 );
   border-image-slice: 1;
@@ -360,8 +359,8 @@
   left: 50%;
   transform: translate(-50%, -50%) rotateZ(-5deg) scale(0.4) rotateZ(-45deg); 
   animation: scaleSquares_rotate 5s ease-in-out forwards;
-  width: 250px;
-  height: 250px;
+  width: 350px;
+  height: 350px;
   border: 3px solid;
   border-image-source: linear-gradient(90deg,#cbac44 ,white 16%,#cbac44 25%);
   border-image-slice: 1;
