--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@
     padding: 0;
     box-sizing: border-box;
 }
-
 .page_contianer{
     display: grid;
     height: 1100vh;
@@ -81,8 +80,19 @@
   ,linear-gradient(90deg,#9b5a01, #cbac44  );
   background-origin: border-box;
   background-clip: content-box, border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
+.section_1--background_circle{
+  width: calc(100% - 5px);
+  height: calc(100% - 5px);
+  border-radius: 50%;
+  background: url('fondo-arriba.svg');
+  background-size: 150%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
 .circle_times_animation_1{
   position: absolute;
   top: 50%;
@@ -251,6 +261,7 @@
 .section_3 > img{
   opacity: 0;
 }
+
 @keyframes fadeCanvas3 {
   0% {
        opacity: 0;
@@ -277,7 +288,20 @@
         top: 85%;
     }
 }
-
+.section_3--recent_wedding{
+  position:absolute;
+  opacity: 0;
+  width: 80%;
+  height: 50px;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%) ;
+  z-index: 5;
+  animation-name: fadeInText;
+  animation-duration: 2.5s; 
+  animation-timing-function: linear; 
+  animation-fill-mode: forwards;
+}
 @keyframes scaleSquares {
   0% {
     opacity: 0;
@@ -308,26 +332,6 @@
         transform: translate(-50%, -50%) scale(1) rotateZ(0deg); /* Escala final y centrado */
     }
 }
-.section_3--wedding-text{
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -50%) ;
-  width: 75%;
-  opacity: 0;
-  height: fit-content;
-  font-size: 35px;
-  text-align: center;
-  animation-name: fadeInText;
-  animation-duration: 2.5s; 
-  animation-timing-function: linear; 
-  animation-fill-mode: forwards;
-  font-family: "Great Vibes", cursive;
-  font-weight: 400;
-  font-style: normal;
-  color: #cbac44;
-}
-
 .img_wedding {
   position: absolute;
   top: 50%;
